# orchestra

./: .gitignore  README.md  pyproject.toml
mayushii/: __init__.py  cli.py  hooks.py  lifecycle.py  skills.py  store.py  tmux.py
orchestra/: __init__.py  cli.py  hooks.py  lifecycle.py  skills.py  store.py  tmux.py
orchestrator/: SKILL.md
roles/: edit.md  explore.md  plan.md  verify.md
